# dual

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
analysis/: ARCHITECTURE_ANALYSIS.md  PLAN_PHYSICS.md  REPORT.md  REPORT_DETAIL.md
crates/client/: Cargo.toml
crates/client/assets/: README.md
crates/client/src/: app.rs  assets.rs  main.rs
crates/client/src/debug/: mod.rs
crates/client/src/game/: input.rs  mod.rs
crates/client/src/net/: client.rs  config.rs  input.rs  interpolation.rs  mod.rs  prediction.rs  server.rs  snapshot.rs
crates/client/src/render/: camera.rs  cube.rs  debug_overlay.rs  menu_overlay.rs  mod.rs  model.rs  skybox.rs  sphere.rs  static_geometry.rs  texture.rs  vertex.rs
crates/client/src/shaders/: basic.wgsl  menu_quad.wgsl  model.wgsl  player.wgsl  skybox.wgsl
crates/client/src/tui/: mod.rs  screens.rs
crates/demo/: Cargo.toml
crates/demo/src/: main.rs
crates/game/: Cargo.toml
crates/game/src/: lib.rs
crates/game/src/event/: mod.rs  queue.rs  types.rs
crates/game/src/lobby/: mod.rs
crates/game/src/map/: mod.rs  objects.rs  testing_ground.rs
crates/game/src/net/: connection.rs  endpoint.rs  mod.rs  protocol.rs  simulator.rs  snapshot.rs  stats.rs  tracking.rs  transport.rs
crates/game/src/physics/: mod.rs  snapshot.rs  sync.rs  world.rs
crates/game/src/player/: config.rs  controller.rs  mod.rs  state.rs
crates/game/src/simulation/: command.rs  mod.rs  tick.rs
crates/game/src/snapshot/: buffer.rs  entity.rs  mod.rs  world.rs
crates/game/tests/: connection.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  events.rs  main.rs  server.rs  simulation.rs  tui.rs
plan/: ARCHITECTURE.md  PHYSICS.md  ROADMAP.md
src/: app.rs  camera.rs  cube.rs  input.rs  main.rs  renderer.rs  vertex.rs
src/debug/: stats.rs
src/game/: input.rs  mod.rs  time.rs
src/net/: client.rs  interpolation.rs  mod.rs  protocol.rs  server.rs  snapshot.rs  transport.rs
src/render/: camera.rs  debug_overlay.rs  mod.rs  vertex.rs
