[package]
name = "dual"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dual"
path = "src/main.rs"

[dependencies]
dual-game.workspace = true
glam.workspace = true
wgpu.workspace = true
winit.workspace = true
tokio.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde.workspace = true
rkyv.workspace = true
glyphon.workspace = true
bytemuck.workspace = true
image.workspace = true
gltf.workspace = true
rust-embed.workspace = true
bitflags.workspace = true
clap.workspace = true
ratatui.workspace = true
crossterm.workspace = true
